Finished single place page

--- a/src/public/scss/components/place.scss
+++ b/src/public/scss/components/place.scss
@@ -332,7 +332,7 @@
                 display: flex;
                 justify-content: space-between;
                 
-                border-bottom:1px grey solid;
+                border:1px grey solid;
                 background-color: hsl(184, 9%, 100%);
                 
                 .subscriber__pic{
