--- a/src/views/single-place.html
+++ b/src/views/single-place.html
@@ -76,60 +76,8 @@
                   </div>
                 </label>
                 <div class="place-listings__content">
-                  <div class="flex">
-
-                    <div class="flex__item">
-                      <article class="listing">
-                        <div class="listing__content">
-                          <h3 class="title">Proiect CLIW</h3>
-                          <ul class="skills-req">
-                            <li>HTML5</li>
-                            <li>CSS3</li>
-                            <li>JavaScript</li>
-                          </ul>
-
-                          <div class="actions">
-                            <button id="js-join" class="join">Join</button>
-                            <a href="" class="view-listing">View Listing</a>
-                          </div>
-                        </div>
-
-                        <div class="listing__meta">
-                          <a href="#">
-                            <span class="author">Costandache Ovidiu Costi</span>
-                          </a>
-                          <a href="#"><span class="place">The Grape</span></a>
-                        </div>
-
-                        <span class="listing__type">code</span>
-                      </article>
-                    </div>
-
-                    <div class="flex__item">
-                      <article class="listing">
-                        <div class="listing__content">
-                          <h3 class="title">Neural Networks</h3>
-                          <ul class="skills-req">
-                            <li>Machine Learning</li>
-                            <li>Statistics</li>
-                          </ul>
-
-                          <div class="actions">
-                            <button id="js-join" class="join">Join</button>
-                            <a href="" class="view-listing">View Listing</a>
-                          </div>
-                        </div>
-
-                        <div class="listing__meta">
-                          <a href="#">
-                            <span class="author">Georgescu Vlad</span>
-                          </a>
-                          <a href="#"><span class="place">FabLab</span></a>
-                        </div>
-
-                        <span class="listing__type">study</span>
-                      </article>
-                    </div>
+                  <div id="js-listings-in-progress" class="flex">
+                    
                   </div>
                 </div>
               </div>
@@ -141,219 +89,7 @@
                   </div>
                 </label>
                 <div class="place-listings__content">
-                  <div class="flex">
-
-                    <div class="flex__item">
-                      <article class="listing">
-                        <div class="listing__content">
-                          <h3 class="title">Proiect CLIW</h3>
-                          <ul class="skills-req">
-                            <li>HTML5</li>
-                            <li>CSS3</li>
-                            <li>JavaScript</li>
-                          </ul>
-
-                          <div class="actions">
-                            <button id="js-join" class="join">Join</button>
-                            <a href="" class="view-listing">View Listing</a>
-                          </div>
-                        </div>
-
-                        <div class="listing__meta">
-                          <a href="#">
-                            <span class="author">Costandache Ovidiu Costi</span>
-                          </a>
-                          <a href="#"><span class="place">The Grape</span></a>
-                        </div>
-
-                        <span class="listing__type">code</span>
-                      </article>
-                    </div>
-
-                    <div class="flex__item">
-                      <article class="listing">
-                        <div class="listing__content">
-                          <h3 class="title">Neural Networks</h3>
-                          <ul class="skills-req">
-                            <li>Machine Learning</li>
-                            <li>Statistics</li>
-                          </ul>
-
-                          <div class="actions">
-                            <button id="js-join" class="join">Join</button>
-                            <a href="" class="view-listing">View Listing</a>
-                          </div>
-                        </div>
-
-                        <div class="listing__meta">
-                          <a href="#">
-                            <span class="author">Georgescu Vlad</span>
-                          </a>
-                          <a href="#"><span class="place">FabLab</span></a>
-                        </div>
-
-                        <span class="listing__type">study</span>
-                      </article>
-                    </div>
-
-                    <div class="flex__item">
-                      <article class="listing">
-                        <div class="listing__content">
-                          <h3 class="title">Proiect CLIW</h3>
-                          <ul class="skills-req">
-                            <li>HTML5</li>
-                            <li>CSS3</li>
-                            <li>JavaScript</li>
-                          </ul>
-
-                          <div class="actions">
-                            <button id="js-join" class="join">Join</button>
-                            <a href="" class="view-listing">View Listing</a>
-                          </div>
-                        </div>
-
-                        <div class="listing__meta">
-                          <a href="#">
-                            <span class="author">Costandache Ovidiu Costi</span>
-                          </a>
-                          <a href="#"><span class="place">The Grape</span></a>
-                        </div>
-
-                        <span class="listing__type">code</span>
-                      </article>
-                    </div>
-
-                    <div class="flex__item">
-                      <article class="listing">
-                        <div class="listing__content">
-                          <h3 class="title">Neural Networks</h3>
-                          <ul class="skills-req">
-                            <li>Machine Learning</li>
-                            <li>Statistics</li>
-                          </ul>
-
-                          <div class="actions">
-                            <button id="js-join" class="join">Join</button>
-                            <a href="" class="view-listing">View Listing</a>
-                          </div>
-                        </div>
-
-                        <div class="listing__meta">
-                          <a href="#">
-                            <span class="author">Georgescu Vlad</span>
-                          </a>
-                          <a href="#"><span class="place">FabLab</span></a>
-                        </div>
-
-                        <span class="listing__type">study</span>
-                      </article>
-                    </div>
-
-                    <div class="flex__item">
-                      <article class="listing">
-                        <div class="listing__content">
-                          <h3 class="title">Proiect CLIW</h3>
-                          <ul class="skills-req">
-                            <li>HTML5</li>
-                            <li>CSS3</li>
-                            <li>JavaScript</li>
-                          </ul>
-
-                          <div class="actions">
-                            <button id="js-join" class="join">Join</button>
-                            <a href="" class="view-listing">View Listing</a>
-                          </div>
-                        </div>
-
-                        <div class="listing__meta">
-                          <a href="#">
-                            <span class="author">Costandache Ovidiu Costi</span>
-                          </a>
-                          <a href="#"><span class="place">The Grape</span></a>
-                        </div>
-
-                        <span class="listing__type">code</span>
-                      </article>
-                    </div>
-
-                    <div class="flex__item">
-                      <article class="listing">
-                        <div class="listing__content">
-                          <h3 class="title">Neural Networks</h3>
-                          <ul class="skills-req">
-                            <li>Machine Learning</li>
-                            <li>Statistics</li>
-                          </ul>
-
-                          <div class="actions">
-                            <button id="js-join" class="join">Join</button>
-                            <a href="" class="view-listing">View Listing</a>
-                          </div>
-                        </div>
-
-                        <div class="listing__meta">
-                          <a href="#">
-                            <span class="author">Georgescu Vlad</span>
-                          </a>
-                          <a href="#"><span class="place">FabLab</span></a>
-                        </div>
-
-                        <span class="listing__type">study</span>
-                      </article>
-                    </div>
-
-                    <div class="flex__item">
-                      <article class="listing">
-                        <div class="listing__content">
-                          <h3 class="title">Proiect CLIW</h3>
-                          <ul class="skills-req">
-                            <li>HTML5</li>
-                            <li>CSS3</li>
-                            <li>JavaScript</li>
-                          </ul>
-
-                          <div class="actions">
-                            <button id="js-join" class="join">Join</button>
-                            <a href="" class="view-listing">View Listing</a>
-                          </div>
-                        </div>
-
-                        <div class="listing__meta">
-                          <a href="#">
-                            <span class="author">Costandache Ovidiu Costi</span>
-                          </a>
-                          <a href="#"><span class="place">The Grape</span></a>
-                        </div>
-
-                        <span class="listing__type">code</span>
-                      </article>
-                    </div>
-
-                    <div class="flex__item">
-                      <article class="listing">
-                        <div class="listing__content">
-                          <h3 class="title">Neural Networks</h3>
-                          <ul class="skills-req">
-                            <li>Machine Learning</li>
-                            <li>Statistics</li>
-                          </ul>
-
-                          <div class="actions">
-                            <button id="js-join" class="join">Join</button>
-                            <a href="" class="view-listing">View Listing</a>
-                          </div>
-                        </div>
-
-                        <div class="listing__meta">
-                          <a href="#">
-                            <span class="author">Georgescu Vlad</span>
-                          </a>
-                          <a href="#"><span class="place">FabLab</span></a>
-                        </div>
-
-                        <span class="listing__type">study</span>
-                      </article>
-                    </div>
+                  <div id="js-finished-listings" class="flex">
 
                   </div>
                 </div>
@@ -365,10 +101,10 @@
         <div class="place-grid__item">
           <div class="place-subscribe__container">
             <div id="js-subscribe-button" class="place-listings__button">
-              <h2>Subscribe </h2>
+              <h2 id="js-subscribe-title">Subscribe</h2>
             </div>
             <div class="place-listings__subscribers">
-              <span class="place-listings__subscribers-number"> <a id="subscribers" href="#">100000</a>
+              <span class="place-listings__subscribers-number"> <a id="js-subscribers-count" href="#">100000</a>
                 people subscribed
               </span>
             </div>
@@ -381,56 +117,8 @@
             <span id="closeJS" class="subscribed-modal__close">&times;</span>
             <h3 class="subscribed-modal__title">Subscribed people</h3>
           </div>
-          <div class="subscriber-modal__content-flex">
-            <div class="subscriber-container">
-              <img class="subscriber__pic" src=" /images/user-profile-pic.jpg">
-              <div class="subscriber__info">
-                <h3 class="subscriber__info-name">Gelu Samadau</h3>
-                <button class="subscriber__info-profile">View profile</button>
-              </div>
-            </div>
-            <div class="subscriber-container">
-              <img class="subscriber__pic" src=" /images/user-profile-pic.jpg">
-              <div class="subscriber__info">
-                <h3 class="subscriber__info-name">Gelu Samadau</h3>
-                <button class="subscriber__info-profile">View profile</button>
-              </div>
-            </div>
-            <div class="subscriber-container">
-              <img class="subscriber__pic" src=" /images/user-profile-pic.jpg">
-              <div class="subscriber__info">
-                <h3 class="subscriber__info-name">Gelu Samadau</h3>
-                <button class="subscriber__info-profile">View profile</button>
-              </div>
-            </div>
-            <div class="subscriber-container">
-              <img class="subscriber__pic" src=" /images/user-profile-pic.jpg">
-              <div class="subscriber__info">
-                <h3 class="subscriber__info-name">Gelu Samadau</h3>
-                <button class="subscriber__info-profile">View profile</button>
-              </div>
-            </div>
-            <div class="subscriber-container">
-              <img class="subscriber__pic" src=" /images/user-profile-pic.jpg">
-              <div class="subscriber__info">
-                <h3 class="subscriber__info-name">Gelu Samadau</h3>
-                <button class="subscriber__info-profile">View profile</button>
-              </div>
-            </div>
-            <div class="subscriber-container">
-              <img class="subscriber__pic" src=" /images/user-profile-pic.jpg">
-              <div class="subscriber__info">
-                <h3 class="subscriber__info-name">Gelu Samadau</h3>
-                <button class="subscriber__info-profile">View profile</button>
-              </div>
-            </div>
-            <div class="subscriber-container">
-              <img class="subscriber__pic" src=" /images/user-profile-pic.jpg">
-              <div class="subscriber__info">
-                    <h3 class="subscriber__info-name">Gelu Samadau</h3>
-                    <button class="subscriber__info-profile">View profile</button>
-              </div>
-          </div>
+          <div id="js-subscribers-modal" class="subscriber-modal__content-flex">
+          
           </div>
         </div>
 
