Finished all listings, bugs may exist

--- a/src/views/browse-listings.html
+++ b/src/views/browse-listings.html
@@ -71,219 +71,7 @@
 
       </div>
 
-      <div class="flex">
-
-        <div class="flex__item">
-          <article class="listing">
-            <div class="listing__content">
-              <h3 class="title">Proiect CLIW</h3>
-              <ul class="skills-req">
-                <li>HTML5</li>
-                <li>CSS3</li>
-                <li>JavaScript</li>
-              </ul>
-
-              <div class="actions">
-                <button id="js-join" class="join">Join</button>
-                <a href="" class="view-listing">View Listing</a>
-              </div>
-            </div>
-
-            <div class="listing__meta">
-              <a href="#">
-                <span class="author">Costandache Ovidiu Costi</span>
-              </a>
-              <a href="#"><span class="place">The Grape</span></a>
-            </div>
-
-            <span class="listing__type">code</span>
-          </article>
-        </div>
-
-        <div class="flex__item">
-          <article class="listing">
-            <div class="listing__content">
-              <h3 class="title">Neural Networks</h3>
-              <ul class="skills-req">
-                <li>Machine Learning</li>
-                <li>Statistics</li>
-              </ul>
-
-              <div class="actions">
-                <button id="js-join" class="join">Join</button>
-                <a href="" class="view-listing">View Listing</a>
-              </div>
-            </div>
-
-            <div class="listing__meta">
-              <a href="#">
-                <span class="author">Georgescu Vlad</span>
-              </a>
-              <a href="#"><span class="place">FabLab</span></a>
-            </div>
-
-            <span class="listing__type">study</span>
-          </article>
-        </div>
-
-        <div class="flex__item">
-          <article class="listing">
-            <div class="listing__content">
-              <h3 class="title">Proiect CLIW</h3>
-              <ul class="skills-req">
-                <li>HTML5</li>
-                <li>CSS3</li>
-                <li>JavaScript</li>
-              </ul>
-
-              <div class="actions">
-                <button id="js-join" class="join">Join</button>
-                <a href="" class="view-listing">View Listing</a>
-              </div>
-            </div>
-
-            <div class="listing__meta">
-              <a href="#">
-                <span class="author">Costandache Ovidiu Costi</span>
-              </a>
-              <a href="#"><span class="place">The Grape</span></a>
-            </div>
-
-            <span class="listing__type">code</span>
-          </article>
-        </div>
-
-        <div class="flex__item">
-          <article class="listing">
-            <div class="listing__content">
-              <h3 class="title">Neural Networks</h3>
-              <ul class="skills-req">
-                <li>Machine Learning</li>
-                <li>Statistics</li>
-              </ul>
-
-              <div class="actions">
-                <button id="js-join" class="join">Join</button>
-                <a href="" class="view-listing">View Listing</a>
-              </div>
-            </div>
-
-            <div class="listing__meta">
-              <a href="#">
-                <span class="author">Georgescu Vlad</span>
-              </a>
-              <a href="#"><span class="place">FabLab</span></a>
-            </div>
-
-            <span class="listing__type">study</span>
-          </article>
-        </div>
-
-        <div class="flex__item">
-          <article class="listing">
-            <div class="listing__content">
-              <h3 class="title">Proiect CLIW</h3>
-              <ul class="skills-req">
-                <li>HTML5</li>
-                <li>CSS3</li>
-                <li>JavaScript</li>
-              </ul>
-
-              <div class="actions">
-                <button id="js-join" class="join">Join</button>
-                <a href="" class="view-listing">View Listing</a>
-              </div>
-            </div>
-
-            <div class="listing__meta">
-              <a href="#">
-                <span class="author">Costandache Ovidiu Costi</span>
-              </a>
-              <a href="#"><span class="place">The Grape</span></a>
-            </div>
-
-            <span class="listing__type">code</span>
-          </article>
-        </div>
-
-        <div class="flex__item">
-          <article class="listing">
-            <div class="listing__content">
-              <h3 class="title">Neural Networks</h3>
-              <ul class="skills-req">
-                <li>Machine Learning</li>
-                <li>Statistics</li>
-              </ul>
-
-              <div class="actions">
-                <button id="js-join" class="join">Join</button>
-                <a href="" class="view-listing">View Listing</a>
-              </div>
-            </div>
-
-            <div class="listing__meta">
-              <a href="#">
-                <span class="author">Georgescu Vlad</span>
-              </a>
-              <a href="#"><span class="place">FabLab</span></a>
-            </div>
-
-            <span class="listing__type">study</span>
-          </article>
-        </div>
-
-        <div class="flex__item">
-          <article class="listing">
-            <div class="listing__content">
-              <h3 class="title">Proiect CLIW</h3>
-              <ul class="skills-req">
-                <li>HTML5</li>
-                <li>CSS3</li>
-                <li>JavaScript</li>
-              </ul>
-
-              <div class="actions">
-                <button id="js-join" class="join">Join</button>
-                <a href="" class="view-listing">View Listing</a>
-              </div>
-            </div>
-
-            <div class="listing__meta">
-              <a href="#">
-                <span class="author">Costandache Ovidiu Costi</span>
-              </a>
-              <a href="#"><span class="place">The Grape</span></a>
-            </div>
-
-            <span class="listing__type">code</span>
-          </article>
-        </div>
-
-        <div class="flex__item">
-          <article class="listing">
-            <div class="listing__content">
-              <h3 class="title">Neural Networks</h3>
-              <ul class="skills-req">
-                <li>Machine Learning</li>
-                <li>Statistics</li>
-              </ul>
-
-              <div class="actions">
-                <button id="js-join" class="join">Join</button>
-                <a href="" class="view-listing">View Listing</a>
-              </div>
-            </div>
-
-            <div class="listing__meta">
-              <a href="#">
-                <span class="author">Georgescu Vlad</span>
-              </a>
-              <a href="#"><span class="place">FabLab</span></a>
-            </div>
-
-            <span class="listing__type">study</span>
-          </article>
-        </div>
+      <div id="js-listings-flex" class="flex">
 
       </div>
 
