--- a/src/views/account.html
+++ b/src/views/account.html
@@ -62,20 +62,20 @@
     <section class="account">
       <div class="account-container">
         <div class="account__pic">
-          <img id="profilePicJS" src="" alt="Profile picture">
+          <img id="js-profile-pic" src="" alt="Profile picture">
         </div>
 
         <div class="account__details">
           <div class="details__identity">
-            <span  class="name"><h2 id="nameJS"></h2></span>
+            <span  class="name"><h2 id="js-name"></h2></span>
 
             <div class="reviews">
               <div class="positive">
-                <span class="count" id="likesJS"></span>
+                <span class="count" id="js-likes"></span>
                 <span class="fa-icon"><i class="fas fa-thumbs-up"></i></span>
               </div>
               <div class="negative">
-                <span class="count" id="dislikesJS"></span>
+                <span class="count" id="js-dislikes"></span>
                 <span class="fa-icon"><i class="fas fa-thumbs-down"></i></span>
               </div>
             </div>
