--- a/src/views/index.html
+++ b/src/views/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/solid.css" integrity="sha384-uKQOWcYZKOuKmpYpvT0xCFAs/wE157X5Ua3H5onoRAOCNkJAMX/6QF0iXGGQV9cP" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/fontawesome.css" integrity="sha384-HU5rcgG/yUrsDGWsVACclYdzdCcn5yU8V/3V84zSrPDHwZEdjykadlgI6RHrxGrJ" crossorigin="anonymous">
   <link rel="stylesheet"  type="text/css" href="/css/styles.min.css">
-  <link rel="manifest" href="../manifest.json">
+  <link rel="manifest" href="/manifest.json">
 
   <title>MeToo - Home</title>
 </head>
@@ -162,10 +162,11 @@
   </div>
 
   <script src="https://www.gstatic.com/firebasejs/5.7.0/firebase.js"></script>
-  <script type="module" src="/js/main.js"></script>
- 
   <script  async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_5eJJP5kndI_iZuB9duVO_bs5KFCKeCQ">
   </script>
+  <script type="module" src="/js/main.js"></script>
+ 
+  
 </body>
 </html>
