--- a/src/views/browse-listings.html
+++ b/src/views/browse-listings.html
@@ -87,7 +87,7 @@
       <li><a href="#">Contact</a></li>
     </ul>
   </footer>
-
+  <script src="/js/Utilities/localforage.js"></script>
   <script type="module" src="/js/main.js"></script>
 
 
