--- a/src/views/browse-places.html
+++ b/src/views/browse-places.html
@@ -72,7 +72,7 @@
       <li><a href="#">Contact</a></li>
     </ul>
   </footer>
-
+  <script src="/js/Utilities/localforage.js"></script>
   <script type="module" src="/js/main.js"></script>
 </body>
 
