--- a/src/views/single-listing.html
+++ b/src/views/single-listing.html
@@ -65,7 +65,7 @@
       <li><a href="#">Contact</a></li>
     </ul>
   </footer>
-  
+  <script src="/js/Utilities/localforage.js"></script>
   <script type="module" src="/js/main.js"></script>
 </body>
 </html>
