--- a/src/views/single-place.html
+++ b/src/views/single-place.html
@@ -136,7 +136,7 @@
       <li><a href="#">Contact</a></li>
     </ul>
   </footer>
-
+  <script src="/js/Utilities/localforage.js"></script>
   <script type="module" src="/js/main.js"></script>
 </body>
 
