--- a/src/views/single-listing.html
+++ b/src/views/single-listing.html
@@ -56,6 +56,10 @@
     </nav>
   </header>
   
+  <main class="main">
+    
+  </main>
+
   <footer class="footer">
     <ul class="nav nav--footer">
       <li><a href="#">Home</a></li>
@@ -65,6 +69,7 @@
       <li><a href="#">Contact</a></li>
     </ul>
   </footer>
+
   <script src="/js/Utilities/localforage.js"></script>
   <script type="module" src="/js/main.js"></script>
 </body>
