layout & typos + refactoring --disabled serviceWorker

--- a/src/views/browse-listings.html
+++ b/src/views/browse-listings.html
@@ -42,7 +42,7 @@
       <h2 class="mobile-title">Public Study</h2>
     </div>
 
-    <nav id="js-nav-wrapper" class="mobile-menu-wrapper">
+    <nav id="js-mobile-nav-wrapper" class="mobile-menu-wrapper">
       <button id="js-nav-close" class="menu-close">
         <span class="close"></span>
         <span class="close"></span>
