--- a/src/views/index.html
+++ b/src/views/index.html
@@ -127,7 +127,7 @@
         <h2 class="mobile-title">Public Study</h2>
       </div>
       
-      <nav id="js-nav-wrapper" class="mobile-menu-wrapper">
+      <nav id="js-mobile-nav-wrapper" class="mobile-menu-wrapper">
         <button id="js-nav-close" class="menu-close">
           <span class="close"></span>
           <span class="close"></span>
@@ -143,11 +143,9 @@
         
       </nav>
     </header>
-   
 
-    <main class="main-content">
+    <main class="main-content main-content--home">
         <div class="map" id="map"></div>
-      
     </main>
 
     <footer class="footer">
