--- a/src/views/single-listing.html
+++ b/src/views/single-listing.html
@@ -40,7 +40,7 @@
       <h2 class="mobile-title">Public Study</h2>
     </div>
     
-    <nav id="js-nav-wrapper" class="mobile-menu-wrapper">
+    <nav id="js-mobile-nav-wrapper" class="mobile-menu-wrapper">
       <button id="js-nav-close" class="menu-close">
         <span class="close"></span>
         <span class="close"></span>
@@ -56,8 +56,28 @@
     </nav>
   </header>
   
-  <main class="main">
-    
+  <main class="main-content main-content--single-listing">
+    <article class="listing">
+      <section id="js-single-listing-info" class="listing__info">
+        <header class="header--listing">
+          <h2 class="title">Title of listing</h2>
+          <a href="" class="author">Name of author</a>
+        </header>
+
+        <ul class="skills-required">
+          <li class="skill">HTML</li>
+          <li class="skill">CSS</li>
+          <li class="skill">JavaScript</li>
+        </ul>
+        <p class="desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate cupiditate nam minima distinctio laudantium accusamus? Ex voluptas animi iure quibusdam repellat facilis soluta, cum fuga explicabo eaque provident aut in?
+        Aspernatur, incidunt placeat dolorem numquam cumque quasi. Consequatur quae doloribus omnis, atque eum qui excepturi officia velit quo optio exercitationem blanditiis sapiente tenetur deleniti a magni aspernatur. Minima, doloremque eveniet.
+        Atque obcaecati doloremque omnis iusto reprehenderit nisi excepturi beatae in. Ratione nesciunt voluptas fuga quos! Eos delectus omnis minima perspiciatis necessitatibus recusandae ad numquam? Eos reiciendis repudiandae quibusdam dolore dolorem?</p>
+      </section>
+      <section id="js-single-listing-comments" class="listing__comments">
+        <h2>Comments</h2>
+
+      </section>
+    </article>
   </main>
 
   <footer class="footer">
