--- a/src/public/scss/styles.scss
+++ b/src/public/scss/styles.scss
@@ -13,6 +13,7 @@
 @import "components/account";
 @import "components/place";
 @import "components/login";
+@import "components/single-listing";
 
 
 html {
@@ -41,19 +42,22 @@ html {
 .main-content {
   margin: 1em 5em;
 
-  height: 80%;
   position: relative;
-  .map{
-    position: absolute;
-    left:50%;
-    top:50%;
-    transform: translate(-50%,-50%);
+  
+  &.main-content--home {
+    min-height: 80%;
 
-    width: 90%;
-    height:90%;
-
+    .map {
+      position: absolute;
+      left:50%;
+      top:50%;
+      transform: translate(-50%,-50%);
+  
+      width: 90%;
+      height: 90%;
 
   }
+}
 
 
   @include query-below($lap) {
