--- a/src/views/account.html
+++ b/src/views/account.html
@@ -42,7 +42,7 @@
       <h2 class="mobile-title">Public Study</h2>
     </div>
     
-    <nav id="js-nav-wrapper" class="mobile-menu-wrapper">
+    <nav id="js-mobile-nav-wrapper" class="mobile-menu-wrapper">
       <button id="js-nav-close" class="menu-close">
         <span class="close"></span>
         <span class="close"></span>
@@ -67,7 +67,7 @@
 
         <div class="account__details">
           <div class="details__identity">
-            <span  class="name"><h2 id="js-name"></h2></span>
+            <span class="name"><h2 id="js-name"></h2></span>
 
             <div class="reviews">
               <div class="positive">
