--- a/src/views/account.html
+++ b/src/views/account.html
@@ -122,7 +122,7 @@
 
           <div class="tab">
             <input id="listings--requests" type="radio" name="checkbox-group" class="tab__checkbox">
-            <label for="listings--requests">Request</label>
+            <label for="listings--requests">Requests</label>
             <div class="tab__content">
               
             </div>
