--- a/src/views/single-listing.html
+++ b/src/views/single-listing.html
@@ -60,18 +60,40 @@
     <article class="listing">
       <section id="js-single-listing-info" class="listing__info">
         <header class="header--listing">
-          <h2 class="title">Title of listing</h2>
-          <a href="" class="author">Name of author</a>
+          <h2 class="title">A very long marvelous incredible title of listing</h2>
+          <span class="type">Coding / Study</span>
+          <a href="" class="author">Răzvan Sbîngu</a>
         </header>
 
-        <ul class="skills-required">
-          <li class="skill">HTML</li>
-          <li class="skill">CSS</li>
-          <li class="skill">JavaScript</li>
-        </ul>
+        <div class="skills-container">
+          <ul class="skills-required">
+            <li class="skill">HTML</li>
+            <li class="skill">CSS</li>
+            <li class="skill">JavaScript</li>
+            <li class="skill">Attention to details</li>
+          </ul>
+        </div>
+
         <p class="desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate cupiditate nam minima distinctio laudantium accusamus? Ex voluptas animi iure quibusdam repellat facilis soluta, cum fuga explicabo eaque provident aut in?
         Aspernatur, incidunt placeat dolorem numquam cumque quasi. Consequatur quae doloribus omnis, atque eum qui excepturi officia velit quo optio exercitationem blanditiis sapiente tenetur deleniti a magni aspernatur. Minima, doloremque eveniet.
         Atque obcaecati doloremque omnis iusto reprehenderit nisi excepturi beatae in. Ratione nesciunt voluptas fuga quos! Eos delectus omnis minima perspiciatis necessitatibus recusandae ad numquam? Eos reiciendis repudiandae quibusdam dolore dolorem?</p>
+
+        <div class="contributors-container">
+          <header class="header--contributors">
+            <h3>Contributors</h3>
+            <span class="pill">10</span>
+          </header>
+          <ul class="contributors">
+            <li class="contributor"><a href="">Chircan F. Dan-Cristian</a></li>
+            <li class="contributor"><a href="">Sbîngu</a></li>
+            <li class="contributor"><a href="">Chircan F. Dan-Cristian</a></li>
+            <li class="contributor"><a href="">Răzvan</a></li>
+            <li class="contributor"><a href="">Chircan F.</a></li>
+            <li class="contributor"><a href="">C. Răzvan</a></li>
+            <li class="contributor"><a href="">F. Dan-Cristian</a></li>
+            <li class="contributor"><a href="">Sbîngu C.</a></li>
+          </ul>
+        </div>
       </section>
       <section id="js-single-listing-comments" class="listing__comments">
         <h2>Comments</h2>
