--- a/src/public/scss/components/single-listing.scss
+++ b/src/public/scss/components/single-listing.scss
@@ -4,8 +4,11 @@
 
   .listing {
     padding: 1em 5em;
+    cursor: default;
 
     .listing__info {
+      padding-bottom: .5em;
+      border-bottom: 1px solid hsl(210, 28%, 80%);
       margin-bottom: 1em;
 
       .header--listing {
@@ -18,6 +21,7 @@
 
         .title {
           margin-bottom: .5em;
+          // text-shadow: 2px 2px 0px hsl(203, 45%, 75%);
         }
 
         .type {
@@ -58,6 +62,8 @@
           .skill {
             padding: .2em .3em;
             border: 1px solid #354a5f;
+            background-color: white;
+            box-shadow: 0 .125rem .25rem rgba(0,0,0,.075);
   
             &:not(:last-of-type) {
               margin-right: .5em;
@@ -107,6 +113,10 @@
           margin-bottom: .5em;
           display: flex;
 
+          // h2 {
+          //   text-shadow: 2px 2px 0px hsl(203, 45%, 75%);
+          // }
+
           .pill {
             padding: .3em .4em;
             border-radius: 50%;
@@ -115,7 +125,7 @@
             font-size: .8em;
             font-weight: 600;
             color: white;
-            background-color: hsl(145, 63%, 49%);
+            background-color: hsl(210, 28%, 29%);
             font-family: 'IBM Plex Sans', sans-serif;
           
             &:empty {
@@ -127,24 +137,31 @@
         .contributors {
           display: flex;
           flex-wrap: wrap;
-  
+          
           .contributor:not(:last-of-type) {
-            margin-right: .3em;
+            margin-right: 1em;
           }
-  
-          .contributor a {
+
+          .contributor > a {
+            position: relative;
             text-decoration: none;
             color: hsl(204, 70%, 53%);
             font-size: 1.1em;
           }
 
-          .contributor:not(:last-of-type):after {
-            content: "|";
-            display: inline-block;
-            margin-left: .3em;
+          .contributor:not(:last-of-type) > a:after {
+            content: "⚫";
+            display: block;
+            position: absolute;
+            top: 50%;
+            right: -1.5em;
+            transform: translate(100%, -50%);
+            font-size: .2em;
           }
         }
       }
     }
   }
+
+  @import "comments";
 }
