--- a/src/views/single-listing.html
+++ b/src/views/single-listing.html
@@ -60,13 +60,13 @@
     <article class="listing">
       <section id="js-single-listing-info" class="listing__info">
         <header class="header--listing">
-          <h2 class="title">A very long marvelous incredible title of listing</h2>
-          <span class="type">Coding / Study</span>
+          <h2 id="js-listing-title" class="title">A very long marvelous incredible title of listing is in effect</h2>
+          <span id="js-listing-type" class="type">Implement / Study</span>
           <a href="" class="author">Răzvan Sbîngu</a>
         </header>
 
         <div class="skills-container">
-          <ul class="skills-required">
+          <ul id="js-listing-skills" class="skills-required">
             <li class="skill">HTML</li>
             <li class="skill">CSS</li>
             <li class="skill">JavaScript</li>
@@ -74,16 +74,22 @@
           </ul>
         </div>
 
-        <p class="desc">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate cupiditate nam minima distinctio laudantium accusamus? Ex voluptas animi iure quibusdam repellat facilis soluta, cum fuga explicabo eaque provident aut in?
-        Aspernatur, incidunt placeat dolorem numquam cumque quasi. Consequatur quae doloribus omnis, atque eum qui excepturi officia velit quo optio exercitationem blanditiis sapiente tenetur deleniti a magni aspernatur. Minima, doloremque eveniet.
-        Atque obcaecati doloremque omnis iusto reprehenderit nisi excepturi beatae in. Ratione nesciunt voluptas fuga quos! Eos delectus omnis minima perspiciatis necessitatibus recusandae ad numquam? Eos reiciendis repudiandae quibusdam dolore dolorem?</p>
+        <p id="js-listing-desc" class="desc">
+          Look at these words. Are they small words? And he referred to my words - if they're small, something else must be small. I guarantee you there's no problem, I guarantee. Does everybody know that pig named Lorem Ipsum? She's a disgusting pig, right?
+
+          Lorem Ipsum is FAKE TEXT! Be careful, or I will spill the beans on your placeholder text. You're telling the enemy exactly what you're going to do. No wonder you've been fighting Lorem Ipsum your entire adult life.
+          
+          An 'extremely credible source' has called my office and told me that Lorem Ipsum's birth certificate is a fraud.
+          
+          He’s not a word hero. He’s a word hero because he was captured. I like text that wasn’t captured. Lorem Ipsum's father was with Lee Harvey Oswald prior to Oswald's being, you know, shot. The best taco bowls are made in Trump Tower Grill. I love Hispanics! I have a 10 year old son. He has words. He is so good with these words it's unbelievable. I know words. I have the best words.
+            </p>
 
         <div class="contributors-container">
           <header class="header--contributors">
-            <h3>Contributors</h3>
-            <span class="pill">10</span>
+            <h2>Contributors</h2>
+            <span id="js-listing-contributors-count" class="pill">10</span>
           </header>
-          <ul class="contributors">
+          <ul id="js-listing-contributors" class="contributors">
             <li class="contributor"><a href="">Chircan F. Dan-Cristian</a></li>
             <li class="contributor"><a href="">Sbîngu</a></li>
             <li class="contributor"><a href="">Chircan F. Dan-Cristian</a></li>
@@ -95,9 +101,31 @@
           </ul>
         </div>
       </section>
-      <section id="js-single-listing-comments" class="listing__comments">
+      <section class="listing__comments">
         <h2>Comments</h2>
+        <section class="posted-comments">
+          <article class="comment">
+            <section class="comment__author">
+              <img src="" alt="" class="profile-pic">
+              <p class="name">
 
+              </p>
+            </section>
+
+            <section class="comment__content">
+              <p></p>
+            </section>
+
+            <section class="comment__meta">
+              <span class="meta__time"></span>
+            </section>
+          </article>
+        </section>
+
+        <section class="post-comment">
+          <p id="js-post-comment-content" class="textarea" contenteditable="true"></p>
+          <button id="js-post-comment" class="submit">Post comment</button>
+        </section>
       </section>
     </article>
   </main>
