--- a/src/public/scss/components/listings.scss
+++ b/src/public/scss/components/listings.scss
@@ -1,97 +1,98 @@
-// .b--listings {
-//   background-color: #edf1f2;
-// }
 .listings {
-    padding: 1em 20em;
-    height: 100%;
-    .listings__nav {
-        display: flex;
-        position: relative;
-        @include query-above($lap) {
-            justify-content: space-between;
-            margin-bottom: 1em;
-            height: 10%;
-        }
-        @include query-below($lap) {
-            flex-direction: column;
-            justify-content: space-between;
-            align-content: center;
-        }
+  padding: 1em 20em;
+  height: 100%;
+
+  .listings__nav {
+    display: flex;
+    position: relative;
+
+    @include query-above($lap) {
+      justify-content: space-between;
+      margin-bottom: 1em;
+      height: 10%;
     }
-    .search__wrapper {
-        display: flex;
-        justify-content: center;
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        @include query-above($lap) {
-            width: 100%;
-            height: 70%;
-        }
-        .search__box {
-            height: 100%;
-            width: 100%;
-        }
-        .search__button {
-            height: 100%;
-            width: 30%;
-            color: hsl(210, 29%, 65%);
-            font-size: 1em;
-            font-weight: bold;
-            background-color: hsl(204, 70%, 86%);
-            transition: opacity .35s ease-in-out;
-            transition: all .35s ease-in-out;
-        }
-        .search__button:hover {
-            color: white;
-            background-color: #9B58B6;
-        }
-    }
-    .listings__nav--new:hover {
-        color: white;
-        background-color: #E6791A;
-    }
-    .listings__nav--new,
-    .listings__nav--messages {
-        background-color: hsl(204, 70%, 86%);
-        color: hsl(210, 29%, 65%);
-        font-size: 1em;
-        font-weight: bold;
-        @include query-above($lap) {
-            height: 100%;
-            width: 30%;
-        }
-        transition: all .35s ease-in-out;
-    }
-    @include listings; // @include query-below($large) {
-    //   padding: 1em 15em;
-    // }
-    // @include query-below($desk) {
-    //   padding: 1em 10em;
-    // }
-    @include query-above($default) {
-        padding: 1em 0;
-    }
-    @include query-above($small) {
-        padding: 1em 5em;
-    }
-    @include query-above($desk) {
-        padding: 1em 10em;
-    }
-    @include query-above($large) {
-        padding: 1em 20em;
-    }
+
     @include query-below($lap) {
-        .listings__nav--new,
-        .listings__nav--messages,
-        .search__wrapper {
-            margin-bottom: 2em;
-        }
+      flex-direction: column;
+      justify-content: space-between;
+      align-content: center;
     }
+  }
+
+  .search__wrapper {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+
+    @include query-above($lap) {
+      width: 100%;
+      height: 70%;
+    }
+
+    .search__box {
+      height: 100%;
+      width: 100%;
+    }
+
+    .search__button {
+      height: 100%;
+      width: 30%;
+      color: hsl(210, 29%, 65%);
+      font-size: 1em;
+      font-weight: bold;
+      background-color: hsl(204, 70%, 86%);
+      transition: opacity 0.35s ease-in-out;
+      transition: all 0.35s ease-in-out;
+    }
+
+    .search__button:hover {
+      color: white;
+      background-color: #9b58b6;
+    }
+  }
+
+  .listings__nav--new:hover {
+    color: white;
+    background-color: #e6791a;
+  }
+
+  .listings__nav--new,
+  .listings__nav--messages {
+    background-color: hsl(204, 70%, 86%);
+    color: hsl(210, 29%, 65%);
+    font-size: 1em;
+    font-weight: bold;
+
+    @include query-above($lap) {
+      height: 100%;
+      width: 30%;
+    }
+
+    transition: all 0.35s ease-in-out;
+  }
+
+  @include listings;
+
+  // @include query-below($large) {
+  //   padding: 1em 15em;
+  // }
+  // @include query-below($desk) {
+  //   padding: 1em 10em;
+  // }
+
+  @include query-below($lap) {
+    .listings__nav--new,
+    .listings__nav--messages,
+    .search__wrapper {
+      margin-bottom: 2em;
+    }
+  }
 }
 
 @include query-above($default) {
-    margin: 1em 0;
+  margin: 1em 0;
 }
 
 // @include query-below($large) {
