--- a/src/public/scss/utils/_mixins.scss
+++ b/src/public/scss/utils/_mixins.scss
@@ -7,6 +7,7 @@
     margin-right: 0.25em;
   }
 }
+
 @mixin listings{
   .flex {
     display: flex;
@@ -132,6 +133,7 @@
     }
   }
 }
+
 @mixin hover-effect-nav($left, $right) {
   &:before {
     content: "{";
@@ -240,53 +242,21 @@
   }
 }
 
-@mixin home-page-grid {
-  display: grid;
-  grid-template-columns: repeat(2, 30%) 40%;
-  grid-template-rows: 40% repeat(2, 10%)  40%;
+@mixin content-container-padding {
+  @include query-above($default) {
+    padding: 1em 0;
+  }
 
-  .grid__item {
-    text-decoration: none;
+  @include query-above($small) {
+    padding: 1em 5em;
+  }
 
-    &:nth-of-type(1) {
-      grid-column: 1 / 3;
-      grid-row: 1 / 4;
+  @include query-above($desk) {
+    padding: 1em 10em;
+  }
 
-      margin-bottom: 1em;
-      @include hover-effect-photo;
-    }
-    
-    &:nth-of-type(2) {
-      margin-left: 1em;
-      margin-bottom: 1em;
-
-      grid-column: 3 / 4;
-      grid-row: 1 / 3;
-
-      @include hover-effect-photo;
-    }
-
-    &:nth-of-type(3) {
-      margin-left: 1em;
-
-      grid-column: 3 / 4;
-      grid-row: 3 / 5;
-      @include hover-effect-photo;
-    }
-
-    &:nth-of-type(4) {
-      margin-left: 1em;
-
-      grid-column: 2 / 3;
-      grid-row: 4 / 5;
-      @include hover-effect-photo;
-    }
-
-    &:nth-of-type(5) {
-      grid-column: 1 / 2;
-      grid-row: 4 / 5;
-      @include hover-effect-photo;
-    }
+  @include query-above($large) {
+    padding: 1em 20em;
   }
 }
 
