fix for browse-listings media queries

--- a/src/public/scss/components/listings.scss
+++ b/src/public/scss/components/listings.scss
@@ -82,6 +82,8 @@
   //   padding: 1em 10em;
   // }
 
+  @include content-container-padding;
+
   @include query-below($lap) {
     .listings__nav--new,
     .listings__nav--messages,
