--- a/src/views/single-listing.html
+++ b/src/views/single-listing.html
@@ -121,7 +121,9 @@
                 <span class="time">4 hours ago</span>
               </section>
 
-              <img class="profile-pic author" src="https://lh4.googleusercontent.com/-jVeZqV0z--8/AAAAAAAAAAI/AAAAAAAAHO8/rE7uL1lvkZQ/photo.jpg" alt="User profile picture">
+              <div class="profile-pic author">
+                <img src="https://lh4.googleusercontent.com/-jVeZqV0z--8/AAAAAAAAAAI/AAAAAAAAHO8/rE7uL1lvkZQ/photo.jpg" alt="User profile picture">
+              </div>
           </section>
 
             <section class="comment__content">
